main.css
*{
    
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
}
/*heading*/
.header {
background-color:darkblue;
  display: flex;
  color: whitesmoke;
  border: 2px solid black;
}

/*adding borders to display search box*/
#citysearch{
    display: flex;
    border: 2px solid black;

}

#weatherbox{
   
    border: 2px solid black;
    width: 100%;
    height: 100%;
}


.forecastbox {
    display: flex;
    border: 2px solid black;
   

}
/* making cards line up with flexbox*/
.card1, .card2, .card3, .card4, .card5{
border: 2px solid black;
background-color: grey;
display: flex;
flex-basis: 0;
width: 100%;
height: 100%;
flex-wrap: wrap;

}

.history{
    border: 2px solid black;
}

